2003-03-04  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added code to prevent calls the addition of more identifiers
	    in the symbol table after a call to a close() function. This
	    will maintain consistency of the atom ids.

	* common/Makefile.in :
	* common/stringlist.cpp :
	* common/stringlist.h :

	  - Added a simple string list class.

	* kb/Makefile.in :
	* kb/identifier.h :
	* kb/identifier.cpp :

	  - Removed identifier class. Now identifiers will be stored
	    simply as a string.

	* kb/kb.cpp :
	* kb/symtab.cpp :
	* kb/symtab.h :

	  - Took out identlist class and replaced it with stringlist
	    since identifiers are now stored as strings.

	  - Simplified some macro definitions.

2003-03-03  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added provisions for constant atoms (true and false);

	* kb/kb.h :
	* kb/kb.cpp :

	  - Added another class to encapsulate all kb operations.

	* common/list.h :
	* common/list.cpp :
	* kb/symtab.h :
	* kb/symtab.cpp :

	  - Added a get() function to return the index of a particular data
	    item.

	  - symtab::length() now returns the length, not error codes.

	* kb/identifier.h :

	  - Added macro for checking basetypes.

	* parser/parser.y :

	  - Now uses kb instead of symtab.

	  - Added debug code for atoms.

	* common/list.cpp :
	* common/list.h :
	* kb/symtab.cpp :
	* kb/symtab.h :

	  - Added provisions for lists to have a name, entirely optional
	    but useful for debugging.

	* kb/symtab.cpp :

	  - Fixed bug that allows identifiers of the same name to be entered.

	* common/list.cpp :
	* common/list.h :
	* kb/symtab.cpp :

	  - Renamed del_i(), del_d(), get_i() and get_d() to del() and get().


2003-03-01  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/identifier.h :
	* kb/symtab.cpp :
	* kb/symtab.h :
	* parser/parser.y :

	  - Modified symtab so that identifiers are stored into 6